# rendezvous-server

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  pom.xml
.github/workflows/: sonar.yml
config/: log4rs.yaml
src/: lib.rs  main.rs
src/main/java/com/kzone/client/: Client.java  ClientSessionHolder.java  SessionHolder.java
src/main/java/com/kzone/client/event/: ClientEvent.java  ClientInfo.java  ClientJoined.java  ClientLeft.java  ClientUpdated.java
src/main/java/com/kzone/p2p/event/: Client.java  ClientJoined.java  ClientLeft.java  ClientSessionHolder.java  ClientUpdatedNotification.java  Message.java  Notification.java
src/main/java/com/kzone/server/: Server.java
src/main/java/com/kzone/server/handler/: RequestDecoder.java  ResponseEncoder.java  ServerHandler.java
src/main/resources/: log4j2.xml
src/test/java/com/kzone/server/: AppTest.java
